@@ -1,6 +1,7 @@
 2020-01-01  Dirk Eddelbuettel  <edd@debian.org>
 
-	* inst/include/Rcpp/module/Module.h: A few more #nocov tags 
+	* inst/include/Rcpp/module/Module.h: A few more #nocov tags
+	* inst/include/Rcpp/XPtr.h: Idem
 
 2019-12-31  Dirk Eddelbuettel  <edd@debian.org>
 
